# st-text-selector

./: pyproject.toml
st_text_selector/frontend/: package-lock.json  package.json
