[tool.poetry]
name = "st-text-selector"
version = "0.1.0"
description = ""
authors = ["Anes Benmerzoug <anes.benmerzoug@unternehmertum.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = ">=0.63"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
